tests/ast-grep/fail/src/domain/statement_flow.ts
export const renderStatus = (ready: boolean) => {
    if (ready) {
        return 'ready';
    }

    return 'blocked';
};
